# quant-framework

./: .gitignore  README.md  setup.cfg  setup.py
quant_framework/: __init__.py  main.py  mock_broker.py  mock_data_provider.py  strategy.py
quant_framework/brokers/: __init__.py  broker.py  mock_broker.py
quant_framework/data_providers/: __init__.py  data_provider.py  eod_historical_data.py  mock_data_provider.py
quant_framework/internal/: configuration.py
quant_framework/internal/models/: __init__.py  data_provider.py  historical_price.py  strategy.py
quant_framework/internal/utils/: backtest.py  db.py  strategy_loader.py
quant_framework/internal/www/: app.py
quant_framework/strategies/: __init__.py  mock_buy_and_hold.py  strategy.py
