[metadata]
# replace with your username:
name = quant-framework-brendangeck
version = 0.0.1
author = Brendan Geck
author_email = bpgeck@gmail.com
description = A basic framework for backtesting and going live with quant strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brendangeck/quant-framework
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6